Fixed max width of table, use overflow-x-auto when table is to wide

--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -14,6 +14,9 @@
 	table {
 		margin: 0 0 _size(element-margin) 0;
 		width: 100%;
+		max-width: 100%;
+		display: block;
+		overflow-x: auto;
 
 		tbody {
 			tr {
